[package]
name = "day11_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = "0.4.0"
itertools = "0.10.5"
num = "0.4.0"
pest = "2.5.1"
pest_derive = "2.5.1"
utils = { version = "0.1.0", path = "../utils" }
